syntax = "proto3";

package cluster.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/cluster/v1/error_reason.proto";
import "api/cluster/v1/message.proto";

option go_package = "api/cluster/v1;v1";

service ClusterService {
  rpc Get(google.protobuf.Empty) returns (cluster.v1.Clusters) {
    option (google.api.http) = {
      get: "/cluster/v1/get"
    };
  }

  rpc Save(cluster.v1.Cluster) returns (cluster.v1.Msg) {
    option (google.api.http) = {
      post: "/cluster/v1/save"
      body: "*"
    };
  }

  rpc Delete(cluster.v1.ClusterID) returns (cluster.v1.Msg) {
    option (google.api.http) = {
      delete: "/cluster/v1/delete/{id}"
    };
  }

  rpc Apply(cluster.v1.ClusterName) returns (cluster.v1.Msg) {
    option (google.api.http) = {
      post: "/cluster/v1/apply"
      body: "*"
    };
  }

}